--- a/src/styles/sass/components/landing/_sponsors.sass
+++ b/src/styles/sass/components/landing/_sponsors.sass
@@ -40,6 +40,7 @@
                 grid-column-gap: 0rem
                 @include respond(tab-land)
                     padding: 5rem
+                    padding-top: 0rem
                 @include respond(phone)
                         padding: 6rem 14% 1rem 14%
                 
